puts triangle in correct position when viewport at full, changes shape to be in line with design, uses proper variable for colour. not responsive yet.

--- a/src/components/doublePage/doublePage.scss
+++ b/src/components/doublePage/doublePage.scss
@@ -31,11 +31,11 @@
 
 .triangle-right {
   position: relative;
-  left: 1120px;
+  left: 1126px;
   top: 250px;
   width: 0; 
   height: 0; 
   border-top: 80px solid transparent;
   border-bottom: 80px solid transparent;
-  border-left: 60px solid blue;
+  border-left: 80px solid $color-accent-light;
 }
